docs/style.css
@import url('https://fonts.googleapis.com/css2?family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');

@font-face {
	font-family: 'Fira Code';
	src: url('/ttf/FiraCode-Light.ttf') format('truetype');
	font-weight: 300;
}

@font-face {
	font-family: 'Fira Code';
	src: url('/ttf/FiraCode-Regular.ttf') format('truetype');
	font-weight: 400;
}

@font-face {
	font-family: 'Fira Code';
	src: url('/ttf/FiraCode-Medium.ttf') format('truetype');
	font-weight: 500;
}

@font-face {
	font-family: 'Fira Code';
	src: url('/ttf/FiraCode-SemiBold.ttf') format('truetype');
	font-weight: 600;
}

@font-face {
	font-family: 'Fira Code';
	src: url('/ttf/FiraCode-Bold.ttf') format('truetype');
	font-weight: 700;
}


body
{
	padding-top: 5rem;
	margin: 0;
	font-size: 1.7rem;
	line-height: 2.3rem;
	font-family: "Libertinus Serif", serif;
	color: #333;
	width: 100vw;
	overflow-x: hidden;
	text-align: justify;
}

@media (prefers-color-scheme: dark) {
	body {
		color: #eee;
		background-color: #111;
	}
}

h1
{
	font-size: 5rem;
}

h2
{
	font-size: 3rem;
}

h3
{
	font-size: 2.2rem;
}

@media (prefers-color-scheme: dark) {
	a {
		color: #5053ff;
	}

	a:visited {
		color: #9051c6;
	}
}

h3 a, h3 a:visited
{
	color: #333;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	h3 a, h3 a:visited {
		color: #eee;
	}
}

h3 a:hover
{
	text-decoration: underline;
}

code, pre
{
	font-family: "Fira Code", monospace;
}

nav
{
	position: fixed;
	top: 0;
	width: 100%;
	padding-top: 1rem;
	padding-bottom: 1rem;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	gap: 1rem;
	background: #d57fd5;
	border-bottom: #333 solid;
	height: 5rem;
	max-height: 5rem;
	overflow-y: hidden;
	z-index: 9;
}

@media (prefers-color-scheme: dark) {
	nav {
		background-color: #560056;
		border-bottom: #eee solid;
	}
}

@media(max-width: 927px) {
	body
	{
		padding-top: 10rem;
	}
	nav
	{
		height: 10rem;
		max-height: 10rem;
	}
}

nav a, nav a:visited
{
	display: block;
	background-color: #fff;
	border-style: solid;
	border-width: 0.2rem;
	border-color: #333;
	border-radius: 1rem;
	padding: 0.5rem 1rem;
	height: 3rem;
	text-wrap: nowrap;
	text-align: center;
	align-content: center;
	color: #333;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	nav a, nav a:visited {
		background-color: #111;
		color: #eee;
		border-color: #eee;
	}
}

nav a:hover
{
	text-decoration: underline;
}

nav a.here:hover
{
	text-decoration: none;
}

header
{
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	text-align: center;
	background-color: #810081;
	padding-top: 3rem;
	padding-bottom: 2rem;
	font-size: 3rem;
	color: #eee;
	border-bottom: #333 solid;
	text-shadow: 0 0 0.2rem #000;
}

@media (prefers-color-scheme: dark) {
	header {
		border-bottom: #eee solid;
	}
}

header img
{
	max-height: 10rem;
	height: 10rem;
}

main
{
	max-width: 90rem;
	margin-left: auto;
	margin-right: auto;
	padding: 1rem 2rem;
}

.post-header
{
	width: 100%;
	height: 10rem;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	padding-top: 2rem;
	align-content: space-between;
}

.post-header .tags
{
	text-align: right;
}

.post
{
	padding-bottom: 2rem;
}

.post a, .post a:visited
{
	color: #333;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	.post a, .post a:visited {
		color: #eee;
	}
}

.post a:hover
{
	text-decoration: underline;
}

.post .header
{
	display: flex;
	justify-content: space-between;
}

.post .header h3
{
	margin: 0;
	padding: 0;
}

.date
{
	font-size: 1.2rem;
	color: #777;
}

.post .summary
{
	margin-top: 0;
}

.tags
{
	display: flex;
	justify-content: flex-end;
	gap: 1rem;
}

.tag, .tag:visited
{
	background-color: #d57fd5;
	border-color: #333;
	border-width: 0.2rem;
	border-radius: 1rem;
	border-style: solid;
	padding: 0.5rem;
	font-size: 1.5rem;
	color: #333;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	.tag, .tag:visited {
		background-color: #560056;
		border-color: #eee;
		color: #eee;
	}
}

.tag:hover
{
	text-decoration: underline;
}

h2:has(.tag)
{
	display: inline-block;
	margin: 0.5rem;
}

.more
{
	text-align: center;
	display: block;
	max-width: fit-content;
	padding: 0.5rem 1rem;
	margin-left: auto;
	margin-right: auto;
	border-color: #333;
	border-width: 0.2rem;
	border-style: solid;
	border-radius: 1rem;
	color: #333;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	.more {
		border-color: #eee;
		color: #eee;
	}
}

.more:hover
{
	text-decoration: underline;
}

.typst p
{
	display: inline;
}

.inline-typst
{
	display: inline;
}

.block-typst
{
	text-align: center;
	padding: 2rem;
}

@media (prefers-color-scheme: dark) {
	svg {
		filter: invert() hue-rotate(180deg) brightness(calc(14/12));
	}
}

footer
{
	width: 100%;
	text-align: center;
	font-size: 1rem;
	color: #777;
	padding: 2rem 2rem 4rem;
}

